tests/NormalTests/paczka1/small_fuzzy/63331261.err
Error in line 1: Cr7eE S771 14,9
Error in line 8: A4TZ0 A154 78,67
Error in line 4: A4TZ0 A154 60,9
